src/parser.output
Terminals unused in grammar

   CADENA
   QUOTA
   APOST
   OCOMENT
   CCOMENT


Grammar

    0 $accept: enie $end

    1 enie: begin enterscope funcl end leavescope

    2 begin: sepaux
    3      | %empty

    4 end: sepaux

    5 sepaux: sepaux SEP
    6       | SEP

    7 funcl: funcl sepaux func leavescope
    8      | func leavescope
    9      | error SEP

   10 func: header instbl

   11 header: idheader COLCOL enterscope signa
   12       | ENIE COLCOL enterscope signa

   13 idheader: addid

   14 signa: arglist ARROW type
   15      | arglist
   16      | TILDE
   17      | TILDE ARROW type

   18 arglist: arglist COMMA declonly
   19        | declonly
   20        | VAR declonly

   21 instlist: instlist sepaux inst
   22         | inst
   23         | error

   24 instbl: OBRACE sepaux instlist sepaux CBRACE

   25 inst: asign
   26     | decl
   27     | selec
   28     | multselec
   29     | indite
   30     | detite
   31     | return
   32     | callfunc
   33     | LEER exp
   34     | ESCRIBIR exp

   35 checkid: ID

   36 addid: ID

   37 asign: checkid EQUAL exp
   38      | checkid arr EQUAL arrvalues

   39 arrvalues: exp
   40          | OBRACE arrvalueslist CBRACE

   41 arrvalueslist: arrvalueslist COMMA arrvalues
   42              | arrvalues

   43 decl: typeid EQUAL exp
   44     | typeid arr EQUAL arrvalues
   45     | declonly
   46     | declbox

   47 declonly: typeid
   48         | typeid arr

   49 typeid: type addid

   50 type: ENT
   51     | FLOT
   52     | NADA
   53     | BOOL
   54     | CAR
   55     | ARREGLO

   56 selec: SI LPAR exp RPAR enterscope instbl leavescope oselect sinoselect

   57 oselect: oselect OSI LPAR exp RPAR enterscope instbl leavescope
   58        | %empty

   59 sinoselect: SINO enterscope instbl leavescope
   60           | %empty

   61 multselec: CASO checkid OBRACE sepaux optionslist lastoption sepaux CBRACE

   62 lastoption: sepaux BSLASH QUESTION ARROW instbl

   63 optionslist: optionslist sepaux option
   64            | option

   65 option: BSLASH leftsideopt ARROW instbl

   66 leftsideopt: CONSTCAD
   67            | checkid

   68 indite: MIENTRAS LPAR exp RPAR enterscope instbl leavescope

   69 detite: PARA LPAR enterscope decl SEMICOL exp SEMICOL exp RPAR instbl leavescope

   70 return: RETORNA
   71       | RETORNA exp

   72 exp: term
   73    | exp PLUS exp
   74    | exp MINUS exp
   75    | exp MULT exp
   76    | exp DIV exp
   77    | exp MOD exp
   78    | exp POWER exp
   79    | exp OR exp
   80    | exp AND exp
   81    | exp LTHAN exp
   82    | exp GTHAN exp
   83    | exp LETHAN exp
   84    | exp GETHAN exp
   85    | exp EQUIV exp
   86    | exp INEQUIV exp
   87    | exp DOTDOT exp
   88    | NEGATION exp
   89    | MINUS exp
   90    | LPAR exp RPAR

   91 term: checkid
   92     | NUMENT
   93     | NUMFLOT
   94     | CIERTO
   95     | FALSO
   96     | checkid arr
   97     | callfunc
   98     | CONSTCAD
   99     | boxelem
  100     | error

  101 arr: arr OBRACK exp CBRACK
  102    | OBRACK exp CBRACK
  103    | arr OBRACK TILDE CBRACK
  104    | OBRACK TILDE CBRACK

  105 declbox: declboxtypeid OBRACE enterscope declist leavescope CBRACE

  106 declboxtypeid: declboxtype addid

  107 declboxtype: UNION
  108            | REGISTRO

  109 declist: declist sepaux decl
  110        | decl

  111 callfunc: checkid LPAR explist RPAR
  112         | checkid LPAR RPAR

  113 explist: explist COMMA exp
  114        | exp

  115 boxelem: term ONEDOT checkid

  116 enterscope: %empty

  117 leavescope: %empty


Terminals, with rules where they appear

$end (0) 0
error (256) 9 23 100
NUMENT (258) 92
NUMFLOT (259) 93
CONSTCAD (260) 66 98
ID (261) 35 36
SI (262) 56
OSI (263) 57
SINO (264) 59
MIENTRAS (265) 68
PARA (266) 69
CASO (267) 61
ENT (268) 50
FLOT (269) 51
NADA (270) 52
BOOL (271) 53
VAR (272) 20
CAR (273) 54
CADENA (274)
REGISTRO (275) 108
RETORNA (276) 70 71
CIERTO (277) 94
FALSO (278) 95
ARREGLO (279) 55
UNION (280) 107
ENIE (281) 12
LEER (282) 33
ESCRIBIR (283) 34
OBRACK (284) 101 102 103 104
CBRACK (285) 101 102 103 104
OBRACE (286) 24 40 61 105
CBRACE (287) 24 40 61 105
LPAR (288) 56 57 68 69 90 111 112
RPAR (289) 56 57 68 69 90 111 112
EQUAL (290) 37 38 43 44
EQUIV (291) 85
INEQUIV (292) 86
DOTDOT (293) 87
ONEDOT (294) 115
COLCOL (295) 11 12
TILDE (296) 16 17 103 104
ARROW (297) 14 17 62 65
SEMICOL (298) 69
COMMA (299) 18 41 113
MINUS (300) 74 89
PLUS (301) 73
MULT (302) 75
DIV (303) 76
MOD (304) 77
LTHAN (305) 81
GTHAN (306) 82
LETHAN (307) 83
GETHAN (308) 84
NEGATION (309) 88
AND (310) 80
OR (311) 79
QUOTA (312)
APOST (313)
BSLASH (314) 62 65
OCOMENT (315)
CCOMENT (316)
SEP (317) 5 6 9
QUESTION (318) 62
POWER (319) 78
NEG (320)


Nonterminals, with rules where they appear

$accept (66)
    on left: 0
enie (67)
    on left: 1, on right: 0
begin (68)
    on left: 2 3, on right: 1
end (69)
    on left: 4, on right: 1
sepaux (70)
    on left: 5 6, on right: 2 4 5 7 21 24 61 62 63 109
funcl (71)
    on left: 7 8 9, on right: 1 7
func (72)
    on left: 10, on right: 7 8
header (73)
    on left: 11 12, on right: 10
idheader (74)
    on left: 13, on right: 11
signa (75)
    on left: 14 15 16 17, on right: 11 12
arglist (76)
    on left: 18 19 20, on right: 14 15 18
instlist (77)
    on left: 21 22 23, on right: 21 24
instbl (78)
    on left: 24, on right: 10 56 57 59 62 65 68 69
inst (79)
    on left: 25 26 27 28 29 30 31 32 33 34, on right: 21 22
checkid (80)
    on left: 35, on right: 37 38 61 67 91 96 111 112 115
addid (81)
    on left: 36, on right: 13 49 106
asign (82)
    on left: 37 38, on right: 25
arrvalues (83)
    on left: 39 40, on right: 38 41 42 44
arrvalueslist (84)
    on left: 41 42, on right: 40 41
decl (85)
    on left: 43 44 45 46, on right: 26 69 109 110
declonly (86)
    on left: 47 48, on right: 18 19 20 45
typeid (87)
    on left: 49, on right: 43 44 47 48
type (88)
    on left: 50 51 52 53 54 55, on right: 14 17 49
selec (89)
    on left: 56, on right: 27
oselect (90)
    on left: 57 58, on right: 56 57
sinoselect (91)
    on left: 59 60, on right: 56
multselec (92)
    on left: 61, on right: 28
lastoption (93)
    on left: 62, on right: 61
optionslist (94)
    on left: 63 64, on right: 61 63
option (95)
    on left: 65, on right: 63 64
leftsideopt (96)
    on left: 66 67, on right: 65
indite (97)
    on left: 68, on right: 29
detite (98)
    on left: 69, on right: 30
return (99)
    on left: 70 71, on right: 31
exp (100)
    on left: 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89
    90, on right: 33 34 37 39 43 56 57 68 69 71 73 74 75 76 77 78 79
    80 81 82 83 84 85 86 87 88 89 90 101 102 113 114
term (101)
    on left: 91 92 93 94 95 96 97 98 99 100, on right: 72 115
arr (102)
    on left: 101 102 103 104, on right: 38 44 48 96 101 103
declbox (103)
    on left: 105, on right: 46
declboxtypeid (104)
    on left: 106, on right: 105
declboxtype (105)
    on left: 107 108, on right: 106
declist (106)
    on left: 109 110, on right: 105 109
callfunc (107)
    on left: 111 112, on right: 32 97
explist (108)
    on left: 113 114, on right: 111 113
boxelem (109)
    on left: 115, on right: 99
enterscope (110)
    on left: 116, on right: 1 11 12 56 57 59 68 69 105
leavescope (111)
    on left: 117, on right: 1 7 8 56 57 59 68 69 105


State 0

    0 $accept: . enie $end

    SEP  shift, and go to state 1

    $default  reduce using rule 3 (begin)

    enie    go to state 2
    begin   go to state 3
    sepaux  go to state 4


State 1

    6 sepaux: SEP .

    $default  reduce using rule 6 (sepaux)


State 2

    0 $accept: enie . $end

    $end  shift, and go to state 5


State 3

    1 enie: begin . enterscope funcl end leavescope

    $default  reduce using rule 116 (enterscope)

    enterscope  go to state 6


State 4

    2 begin: sepaux .
    5 sepaux: sepaux . SEP

    SEP  shift, and go to state 7

    $default  reduce using rule 2 (begin)


State 5

    0 $accept: enie $end .

    $default  accept


State 6

    1 enie: begin enterscope . funcl end leavescope

    error  shift, and go to state 8
    ID     shift, and go to state 9
    ENIE   shift, and go to state 10

    funcl     go to state 11
    func      go to state 12
    header    go to state 13
    idheader  go to state 14
    addid     go to state 15


State 7

    5 sepaux: sepaux SEP .

    $default  reduce using rule 5 (sepaux)


State 8

    9 funcl: error . SEP

    SEP  shift, and go to state 16


State 9

   36 addid: ID .

    $default  reduce using rule 36 (addid)


State 10

   12 header: ENIE . COLCOL enterscope signa

    COLCOL  shift, and go to state 17


State 11

    1 enie: begin enterscope funcl . end leavescope
    7 funcl: funcl . sepaux func leavescope

    SEP  shift, and go to state 1

    end     go to state 18
    sepaux  go to state 19


State 12

    8 funcl: func . leavescope

    $default  reduce using rule 117 (leavescope)

    leavescope  go to state 20


State 13

   10 func: header . instbl

    OBRACE  shift, and go to state 21

    instbl  go to state 22


State 14

   11 header: idheader . COLCOL enterscope signa

    COLCOL  shift, and go to state 23


State 15

   13 idheader: addid .

    $default  reduce using rule 13 (idheader)


State 16

    9 funcl: error SEP .

    $default  reduce using rule 9 (funcl)


State 17

   12 header: ENIE COLCOL . enterscope signa

    $default  reduce using rule 116 (enterscope)

    enterscope  go to state 24


State 18

    1 enie: begin enterscope funcl end . leavescope

    $default  reduce using rule 117 (leavescope)

    leavescope  go to state 25


State 19

    4 end: sepaux .
    5 sepaux: sepaux . SEP
    7 funcl: funcl sepaux . func leavescope

    ID    shift, and go to state 9
    ENIE  shift, and go to state 10
    SEP   shift, and go to state 7

    $default  reduce using rule 4 (end)

    func      go to state 26
    header    go to state 13
    idheader  go to state 14
    addid     go to state 15


State 20

    8 funcl: func leavescope .

    $default  reduce using rule 8 (funcl)


State 21

   24 instbl: OBRACE . sepaux instlist sepaux CBRACE

    SEP  shift, and go to state 1

    sepaux  go to state 27


State 22

   10 func: header instbl .

    $default  reduce using rule 10 (func)


State 23

   11 header: idheader COLCOL . enterscope signa

    $default  reduce using rule 116 (enterscope)

    enterscope  go to state 28


State 24

   12 header: ENIE COLCOL enterscope . signa

    ENT      shift, and go to state 29
    FLOT     shift, and go to state 30
    NADA     shift, and go to state 31
    BOOL     shift, and go to state 32
    VAR      shift, and go to state 33
    CAR      shift, and go to state 34
    ARREGLO  shift, and go to state 35
    TILDE    shift, and go to state 36

    signa     go to state 37
    arglist   go to state 38
    declonly  go to state 39
    typeid    go to state 40
    type      go to state 41


State 25

    1 enie: begin enterscope funcl end leavescope .

    $default  reduce using rule 1 (enie)


State 26

    7 funcl: funcl sepaux func . leavescope

    $default  reduce using rule 117 (leavescope)

    leavescope  go to state 42


State 27

    5 sepaux: sepaux . SEP
   24 instbl: OBRACE sepaux . instlist sepaux CBRACE

    error     shift, and go to state 43
    ID        shift, and go to state 44
    SI        shift, and go to state 45
    MIENTRAS  shift, and go to state 46
    PARA      shift, and go to state 47
    CASO      shift, and go to state 48
    ENT       shift, and go to state 29
    FLOT      shift, and go to state 30
    NADA      shift, and go to state 31
    BOOL      shift, and go to state 32
    CAR       shift, and go to state 34
    REGISTRO  shift, and go to state 49
    RETORNA   shift, and go to state 50
    ARREGLO   shift, and go to state 35
    UNION     shift, and go to state 51
    LEER      shift, and go to state 52
    ESCRIBIR  shift, and go to state 53
    SEP       shift, and go to state 7

    instlist       go to state 54
    inst           go to state 55
    checkid        go to state 56
    asign          go to state 57
    decl           go to state 58
    declonly       go to state 59
    typeid         go to state 60
    type           go to state 41
    selec          go to state 61
    multselec      go to state 62
    indite         go to state 63
    detite         go to state 64
    return         go to state 65
    declbox        go to state 66
    declboxtypeid  go to state 67
    declboxtype    go to state 68
    callfunc       go to state 69


State 28

   11 header: idheader COLCOL enterscope . signa

    ENT      shift, and go to state 29
    FLOT     shift, and go to state 30
    NADA     shift, and go to state 31
    BOOL     shift, and go to state 32
    VAR      shift, and go to state 33
    CAR      shift, and go to state 34
    ARREGLO  shift, and go to state 35
    TILDE    shift, and go to state 36

    signa     go to state 70
    arglist   go to state 38
    declonly  go to state 39
    typeid    go to state 40
    type      go to state 41


State 29

   50 type: ENT .

    $default  reduce using rule 50 (type)


State 30

   51 type: FLOT .

    $default  reduce using rule 51 (type)


State 31

   52 type: NADA .

    $default  reduce using rule 52 (type)


State 32

   53 type: BOOL .

    $default  reduce using rule 53 (type)


State 33

   20 arglist: VAR . declonly

    ENT      shift, and go to state 29
    FLOT     shift, and go to state 30
    NADA     shift, and go to state 31
    BOOL     shift, and go to state 32
    CAR      shift, and go to state 34
    ARREGLO  shift, and go to state 35

    declonly  go to state 71
    typeid    go to state 40
    type      go to state 41


State 34

   54 type: CAR .

    $default  reduce using rule 54 (type)


State 35

   55 type: ARREGLO .

    $default  reduce using rule 55 (type)


State 36

   16 signa: TILDE .
   17      | TILDE . ARROW type

    ARROW  shift, and go to state 72

    $default  reduce using rule 16 (signa)


State 37

   12 header: ENIE COLCOL enterscope signa .

    $default  reduce using rule 12 (header)


State 38

   14 signa: arglist . ARROW type
   15      | arglist .
   18 arglist: arglist . COMMA declonly

    ARROW  shift, and go to state 73
    COMMA  shift, and go to state 74

    $default  reduce using rule 15 (signa)


State 39

   19 arglist: declonly .

    $default  reduce using rule 19 (arglist)


State 40

   47 declonly: typeid .
   48         | typeid . arr

    OBRACK  shift, and go to state 75

    $default  reduce using rule 47 (declonly)

    arr  go to state 76


State 41

   49 typeid: type . addid

    ID  shift, and go to state 9

    addid  go to state 77


State 42

    7 funcl: funcl sepaux func leavescope .

    $default  reduce using rule 7 (funcl)


State 43

   23 instlist: error .

    $default  reduce using rule 23 (instlist)


State 44

   35 checkid: ID .

    $default  reduce using rule 35 (checkid)


State 45

   56 selec: SI . LPAR exp RPAR enterscope instbl leavescope oselect sinoselect

    LPAR  shift, and go to state 78


State 46

   68 indite: MIENTRAS . LPAR exp RPAR enterscope instbl leavescope

    LPAR  shift, and go to state 79


State 47

   69 detite: PARA . LPAR enterscope decl SEMICOL exp SEMICOL exp RPAR instbl leavescope

    LPAR  shift, and go to state 80


State 48

   61 multselec: CASO . checkid OBRACE sepaux optionslist lastoption sepaux CBRACE

    ID  shift, and go to state 44

    checkid  go to state 81


State 49

  108 declboxtype: REGISTRO .

    $default  reduce using rule 108 (declboxtype)


State 50

   70 return: RETORNA .
   71       | RETORNA . exp

    error     shift, and go to state 82
    NUMENT    shift, and go to state 83
    NUMFLOT   shift, and go to state 84
    CONSTCAD  shift, and go to state 85
    ID        shift, and go to state 44
    CIERTO    shift, and go to state 86
    FALSO     shift, and go to state 87
    LPAR      shift, and go to state 88
    MINUS     shift, and go to state 89
    NEGATION  shift, and go to state 90

    SEP  reduce using rule 70 (return)

    checkid   go to state 91
    exp       go to state 92
    term      go to state 93
    callfunc  go to state 94
    boxelem   go to state 95


State 51

  107 declboxtype: UNION .

    $default  reduce using rule 107 (declboxtype)


State 52

   33 inst: LEER . exp

    error     shift, and go to state 82
    NUMENT    shift, and go to state 83
    NUMFLOT   shift, and go to state 84
    CONSTCAD  shift, and go to state 85
    ID        shift, and go to state 44
    CIERTO    shift, and go to state 86
    FALSO     shift, and go to state 87
    LPAR      shift, and go to state 88
    MINUS     shift, and go to state 89
    NEGATION  shift, and go to state 90

    checkid   go to state 91
    exp       go to state 96
    term      go to state 93
    callfunc  go to state 94
    boxelem   go to state 95


State 53

   34 inst: ESCRIBIR . exp

    error     shift, and go to state 82
    NUMENT    shift, and go to state 83
    NUMFLOT   shift, and go to state 84
    CONSTCAD  shift, and go to state 85
    ID        shift, and go to state 44
    CIERTO    shift, and go to state 86
    FALSO     shift, and go to state 87
    LPAR      shift, and go to state 88
    MINUS     shift, and go to state 89
    NEGATION  shift, and go to state 90

    checkid   go to state 91
    exp       go to state 97
    term      go to state 93
    callfunc  go to state 94
    boxelem   go to state 95


State 54

   21 instlist: instlist . sepaux inst
   24 instbl: OBRACE sepaux instlist . sepaux CBRACE

    SEP  shift, and go to state 1

    sepaux  go to state 98


State 55

   22 instlist: inst .

    $default  reduce using rule 22 (instlist)


State 56

   37 asign: checkid . EQUAL exp
   38      | checkid . arr EQUAL arrvalues
  111 callfunc: checkid . LPAR explist RPAR
  112         | checkid . LPAR RPAR

    OBRACK  shift, and go to state 75
    LPAR    shift, and go to state 99
    EQUAL   shift, and go to state 100

    arr  go to state 101


State 57

   25 inst: asign .

    $default  reduce using rule 25 (inst)


State 58

   26 inst: decl .

    $default  reduce using rule 26 (inst)


State 59

   45 decl: declonly .

    $default  reduce using rule 45 (decl)


State 60

   43 decl: typeid . EQUAL exp
   44     | typeid . arr EQUAL arrvalues
   47 declonly: typeid .
   48         | typeid . arr

    OBRACK  shift, and go to state 75
    EQUAL   shift, and go to state 102

    $default  reduce using rule 47 (declonly)

    arr  go to state 103


State 61

   27 inst: selec .

    $default  reduce using rule 27 (inst)


State 62

   28 inst: multselec .

    $default  reduce using rule 28 (inst)


State 63

   29 inst: indite .

    $default  reduce using rule 29 (inst)


State 64

   30 inst: detite .

    $default  reduce using rule 30 (inst)


State 65

   31 inst: return .

    $default  reduce using rule 31 (inst)


State 66

   46 decl: declbox .

    $default  reduce using rule 46 (decl)


State 67

  105 declbox: declboxtypeid . OBRACE enterscope declist leavescope CBRACE

    OBRACE  shift, and go to state 104


State 68

  106 declboxtypeid: declboxtype . addid

    ID  shift, and go to state 9

    addid  go to state 105


State 69

   32 inst: callfunc .

    $default  reduce using rule 32 (inst)


State 70

   11 header: idheader COLCOL enterscope signa .

    $default  reduce using rule 11 (header)


State 71

   20 arglist: VAR declonly .

    $default  reduce using rule 20 (arglist)


State 72

   17 signa: TILDE ARROW . type

    ENT      shift, and go to state 29
    FLOT     shift, and go to state 30
    NADA     shift, and go to state 31
    BOOL     shift, and go to state 32
    CAR      shift, and go to state 34
    ARREGLO  shift, and go to state 35

    type  go to state 106


State 73

   14 signa: arglist ARROW . type

    ENT      shift, and go to state 29
    FLOT     shift, and go to state 30
    NADA     shift, and go to state 31
    BOOL     shift, and go to state 32
    CAR      shift, and go to state 34
    ARREGLO  shift, and go to state 35

    type  go to state 107


State 74

   18 arglist: arglist COMMA . declonly

    ENT      shift, and go to state 29
    FLOT     shift, and go to state 30
    NADA     shift, and go to state 31
    BOOL     shift, and go to state 32
    CAR      shift, and go to state 34
    ARREGLO  shift, and go to state 35

    declonly  go to state 108
    typeid    go to state 40
    type      go to state 41


State 75

  102 arr: OBRACK . exp CBRACK
  104    | OBRACK . TILDE CBRACK

    error     shift, and go to state 82
    NUMENT    shift, and go to state 83
    NUMFLOT   shift, and go to state 84
    CONSTCAD  shift, and go to state 85
    ID        shift, and go to state 44
    CIERTO    shift, and go to state 86
    FALSO     shift, and go to state 87
    LPAR      shift, and go to state 88
    TILDE     shift, and go to state 109
    MINUS     shift, and go to state 89
    NEGATION  shift, and go to state 90

    checkid   go to state 91
    exp       go to state 110
    term      go to state 93
    callfunc  go to state 94
    boxelem   go to state 95


State 76

   48 declonly: typeid arr .
  101 arr: arr . OBRACK exp CBRACK
  103    | arr . OBRACK TILDE CBRACK

    OBRACK  shift, and go to state 111

    $default  reduce using rule 48 (declonly)


State 77

   49 typeid: type addid .

    $default  reduce using rule 49 (typeid)


State 78

   56 selec: SI LPAR . exp RPAR enterscope instbl leavescope oselect sinoselect

    error     shift, and go to state 82
    NUMENT    shift, and go to state 83
    NUMFLOT   shift, and go to state 84
    CONSTCAD  shift, and go to state 85
    ID        shift, and go to state 44
    CIERTO    shift, and go to state 86
    FALSO     shift, and go to state 87
    LPAR      shift, and go to state 88
    MINUS     shift, and go to state 89
    NEGATION  shift, and go to state 90

    checkid   go to state 91
    exp       go to state 112
    term      go to state 93
    callfunc  go to state 94
    boxelem   go to state 95


State 79

   68 indite: MIENTRAS LPAR . exp RPAR enterscope instbl leavescope

    error     shift, and go to state 82
    NUMENT    shift, and go to state 83
    NUMFLOT   shift, and go to state 84
    CONSTCAD  shift, and go to state 85
    ID        shift, and go to state 44
    CIERTO    shift, and go to state 86
    FALSO     shift, and go to state 87
    LPAR      shift, and go to state 88
    MINUS     shift, and go to state 89
    NEGATION  shift, and go to state 90

    checkid   go to state 91
    exp       go to state 113
    term      go to state 93
    callfunc  go to state 94
    boxelem   go to state 95


State 80

   69 detite: PARA LPAR . enterscope decl SEMICOL exp SEMICOL exp RPAR instbl leavescope

    $default  reduce using rule 116 (enterscope)

    enterscope  go to state 114


State 81

   61 multselec: CASO checkid . OBRACE sepaux optionslist lastoption sepaux CBRACE

    OBRACE  shift, and go to state 115


State 82

  100 term: error .

    $default  reduce using rule 100 (term)


State 83

   92 term: NUMENT .

    $default  reduce using rule 92 (term)


State 84

   93 term: NUMFLOT .

    $default  reduce using rule 93 (term)


State 85

   98 term: CONSTCAD .

    $default  reduce using rule 98 (term)


State 86

   94 term: CIERTO .

    $default  reduce using rule 94 (term)


State 87

   95 term: FALSO .

    $default  reduce using rule 95 (term)


State 88

   90 exp: LPAR . exp RPAR

    error     shift, and go to state 82
    NUMENT    shift, and go to state 83
    NUMFLOT   shift, and go to state 84
    CONSTCAD  shift, and go to state 85
    ID        shift, and go to state 44
    CIERTO    shift, and go to state 86
    FALSO     shift, and go to state 87
    LPAR      shift, and go to state 88
    MINUS     shift, and go to state 89
    NEGATION  shift, and go to state 90

    checkid   go to state 91
    exp       go to state 116
    term      go to state 93
    callfunc  go to state 94
    boxelem   go to state 95


State 89

   89 exp: MINUS . exp

    error     shift, and go to state 82
    NUMENT    shift, and go to state 83
    NUMFLOT   shift, and go to state 84
    CONSTCAD  shift, and go to state 85
    ID        shift, and go to state 44
    CIERTO    shift, and go to state 86
    FALSO     shift, and go to state 87
    LPAR      shift, and go to state 88
    MINUS     shift, and go to state 89
    NEGATION  shift, and go to state 90

    checkid   go to state 91
    exp       go to state 117
    term      go to state 93
    callfunc  go to state 94
    boxelem   go to state 95


State 90

   88 exp: NEGATION . exp

    error     shift, and go to state 82
    NUMENT    shift, and go to state 83
    NUMFLOT   shift, and go to state 84
    CONSTCAD  shift, and go to state 85
    ID        shift, and go to state 44
    CIERTO    shift, and go to state 86
    FALSO     shift, and go to state 87
    LPAR      shift, and go to state 88
    MINUS     shift, and go to state 89
    NEGATION  shift, and go to state 90

    checkid   go to state 91
    exp       go to state 118
    term      go to state 93
    callfunc  go to state 94
    boxelem   go to state 95


State 91

   91 term: checkid .
   96     | checkid . arr
  111 callfunc: checkid . LPAR explist RPAR
  112         | checkid . LPAR RPAR

    OBRACK  shift, and go to state 75
    LPAR    shift, and go to state 99

    $default  reduce using rule 91 (term)

    arr  go to state 119


State 92

   71 return: RETORNA exp .
   73 exp: exp . PLUS exp
   74    | exp . MINUS exp
   75    | exp . MULT exp
   76    | exp . DIV exp
   77    | exp . MOD exp
   78    | exp . POWER exp
   79    | exp . OR exp
   80    | exp . AND exp
   81    | exp . LTHAN exp
   82    | exp . GTHAN exp
   83    | exp . LETHAN exp
   84    | exp . GETHAN exp
   85    | exp . EQUIV exp
   86    | exp . INEQUIV exp
   87    | exp . DOTDOT exp

    EQUIV    shift, and go to state 120
    INEQUIV  shift, and go to state 121
    DOTDOT   shift, and go to state 122
    MINUS    shift, and go to state 123
    PLUS     shift, and go to state 124
    MULT     shift, and go to state 125
    DIV      shift, and go to state 126
    MOD      shift, and go to state 127
    LTHAN    shift, and go to state 128
    GTHAN    shift, and go to state 129
    LETHAN   shift, and go to state 130
    GETHAN   shift, and go to state 131
    AND      shift, and go to state 132
    OR       shift, and go to state 133
    POWER    shift, and go to state 134

    $default  reduce using rule 71 (return)


State 93

   72 exp: term .
  115 boxelem: term . ONEDOT checkid

    ONEDOT  shift, and go to state 135

    $default  reduce using rule 72 (exp)


State 94

   97 term: callfunc .

    $default  reduce using rule 97 (term)


State 95

   99 term: boxelem .

    $default  reduce using rule 99 (term)


State 96

   33 inst: LEER exp .
   73 exp: exp . PLUS exp
   74    | exp . MINUS exp
   75    | exp . MULT exp
   76    | exp . DIV exp
   77    | exp . MOD exp
   78    | exp . POWER exp
   79    | exp . OR exp
   80    | exp . AND exp
   81    | exp . LTHAN exp
   82    | exp . GTHAN exp
   83    | exp . LETHAN exp
   84    | exp . GETHAN exp
   85    | exp . EQUIV exp
   86    | exp . INEQUIV exp
   87    | exp . DOTDOT exp

    EQUIV    shift, and go to state 120
    INEQUIV  shift, and go to state 121
    DOTDOT   shift, and go to state 122
    MINUS    shift, and go to state 123
    PLUS     shift, and go to state 124
    MULT     shift, and go to state 125
    DIV      shift, and go to state 126
    MOD      shift, and go to state 127
    LTHAN    shift, and go to state 128
    GTHAN    shift, and go to state 129
    LETHAN   shift, and go to state 130
    GETHAN   shift, and go to state 131
    AND      shift, and go to state 132
    OR       shift, and go to state 133
    POWER    shift, and go to state 134

    $default  reduce using rule 33 (inst)


State 97

   34 inst: ESCRIBIR exp .
   73 exp: exp . PLUS exp
   74    | exp . MINUS exp
   75    | exp . MULT exp
   76    | exp . DIV exp
   77    | exp . MOD exp
   78    | exp . POWER exp
   79    | exp . OR exp
   80    | exp . AND exp
   81    | exp . LTHAN exp
   82    | exp . GTHAN exp
   83    | exp . LETHAN exp
   84    | exp . GETHAN exp
   85    | exp . EQUIV exp
   86    | exp . INEQUIV exp
   87    | exp . DOTDOT exp

    EQUIV    shift, and go to state 120
    INEQUIV  shift, and go to state 121
    DOTDOT   shift, and go to state 122
    MINUS    shift, and go to state 123
    PLUS     shift, and go to state 124
    MULT     shift, and go to state 125
    DIV      shift, and go to state 126
    MOD      shift, and go to state 127
    LTHAN    shift, and go to state 128
    GTHAN    shift, and go to state 129
    LETHAN   shift, and go to state 130
    GETHAN   shift, and go to state 131
    AND      shift, and go to state 132
    OR       shift, and go to state 133
    POWER    shift, and go to state 134

    $default  reduce using rule 34 (inst)


State 98

    5 sepaux: sepaux . SEP
   21 instlist: instlist sepaux . inst
   24 instbl: OBRACE sepaux instlist sepaux . CBRACE

    ID        shift, and go to state 44
    SI        shift, and go to state 45
    MIENTRAS  shift, and go to state 46
    PARA      shift, and go to state 47
    CASO      shift, and go to state 48
    ENT       shift, and go to state 29
    FLOT      shift, and go to state 30
    NADA      shift, and go to state 31
    BOOL      shift, and go to state 32
    CAR       shift, and go to state 34
    REGISTRO  shift, and go to state 49
    RETORNA   shift, and go to state 50
    ARREGLO   shift, and go to state 35
    UNION     shift, and go to state 51
    LEER      shift, and go to state 52
    ESCRIBIR  shift, and go to state 53
    CBRACE    shift, and go to state 136
    SEP       shift, and go to state 7

    inst           go to state 137
    checkid        go to state 56
    asign          go to state 57
    decl           go to state 58
    declonly       go to state 59
    typeid         go to state 60
    type           go to state 41
    selec          go to state 61
    multselec      go to state 62
    indite         go to state 63
    detite         go to state 64
    return         go to state 65
    declbox        go to state 66
    declboxtypeid  go to state 67
    declboxtype    go to state 68
    callfunc       go to state 69


State 99

  111 callfunc: checkid LPAR . explist RPAR
  112         | checkid LPAR . RPAR

    error     shift, and go to state 82
    NUMENT    shift, and go to state 83
    NUMFLOT   shift, and go to state 84
    CONSTCAD  shift, and go to state 85
    ID        shift, and go to state 44
    CIERTO    shift, and go to state 86
    FALSO     shift, and go to state 87
    LPAR      shift, and go to state 88
    RPAR      shift, and go to state 138
    MINUS     shift, and go to state 89
    NEGATION  shift, and go to state 90

    checkid   go to state 91
    exp       go to state 139
    term      go to state 93
    callfunc  go to state 94
    explist   go to state 140
    boxelem   go to state 95


State 100

   37 asign: checkid EQUAL . exp

    error     shift, and go to state 82
    NUMENT    shift, and go to state 83
    NUMFLOT   shift, and go to state 84
    CONSTCAD  shift, and go to state 85
    ID        shift, and go to state 44
    CIERTO    shift, and go to state 86
    FALSO     shift, and go to state 87
    LPAR      shift, and go to state 88
    MINUS     shift, and go to state 89
    NEGATION  shift, and go to state 90

    checkid   go to state 91
    exp       go to state 141
    term      go to state 93
    callfunc  go to state 94
    boxelem   go to state 95


State 101

   38 asign: checkid arr . EQUAL arrvalues
  101 arr: arr . OBRACK exp CBRACK
  103    | arr . OBRACK TILDE CBRACK

    OBRACK  shift, and go to state 111
    EQUAL   shift, and go to state 142


State 102

   43 decl: typeid EQUAL . exp

    error     shift, and go to state 82
    NUMENT    shift, and go to state 83
    NUMFLOT   shift, and go to state 84
    CONSTCAD  shift, and go to state 85
    ID        shift, and go to state 44
    CIERTO    shift, and go to state 86
    FALSO     shift, and go to state 87
    LPAR      shift, and go to state 88
    MINUS     shift, and go to state 89
    NEGATION  shift, and go to state 90

    checkid   go to state 91
    exp       go to state 143
    term      go to state 93
    callfunc  go to state 94
    boxelem   go to state 95


State 103

   44 decl: typeid arr . EQUAL arrvalues
   48 declonly: typeid arr .
  101 arr: arr . OBRACK exp CBRACK
  103    | arr . OBRACK TILDE CBRACK

    OBRACK  shift, and go to state 111
    EQUAL   shift, and go to state 144

    $default  reduce using rule 48 (declonly)


State 104

  105 declbox: declboxtypeid OBRACE . enterscope declist leavescope CBRACE

    $default  reduce using rule 116 (enterscope)

    enterscope  go to state 145


State 105

  106 declboxtypeid: declboxtype addid .

    $default  reduce using rule 106 (declboxtypeid)


State 106

   17 signa: TILDE ARROW type .

    $default  reduce using rule 17 (signa)


State 107

   14 signa: arglist ARROW type .

    $default  reduce using rule 14 (signa)


State 108

   18 arglist: arglist COMMA declonly .

    $default  reduce using rule 18 (arglist)


State 109

  104 arr: OBRACK TILDE . CBRACK
